; ModuleID = '/home/carl/AnghaBench/lwan/src/samples/clock/extr_gifenc.c_write_num.c'
source_filename = "/home/carl/AnghaBench/lwan/src/samples/clock/extr_gifenc.c_write_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_strbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lwan_strbuf*, i32)* @write_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_num(%struct.lwan_strbuf* %0, i32 %1) #0 {
  %3 = alloca %struct.lwan_strbuf*, align 8
  %4 = alloca i32, align 4
  store %struct.lwan_strbuf* %0, %struct.lwan_strbuf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.lwan_strbuf*, %struct.lwan_strbuf** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = and i32 %6, 255
  %8 = call i32 @lwan_strbuf_append_char(%struct.lwan_strbuf* %5, i32 %7)
  %9 = load %struct.lwan_strbuf*, %struct.lwan_strbuf** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = ashr i32 %10, 8
  %12 = call i32 @lwan_strbuf_append_char(%struct.lwan_strbuf* %9, i32 %11)
  ret void
}

declare dso_local i32 @lwan_strbuf_append_char(%struct.lwan_strbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
